--- a/nav2/docker/Dockerfile
+++ b/nav2/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ros:humble
+FROM osrf/ros:humble-desktop
 
 RUN apt update
 RUN apt install -y usbutils net-tools software-properties-common wget
@@ -7,8 +7,10 @@ RUN apt-get install -y libjpeg-dev libjpeg8-dev libfreetype6-dev vim
 RUN wget https://bootstrap.pypa.io/get-pip.py && python3 get-pip.py
 RUN python3 -m pip install --upgrade odrive
 
+RUN apt-get update
+
 RUN apt-get install -y ros-humble-diagnostic-updater
 RUN apt-get install -y ros-humble-tf-transformations
-RUN apt-get update
+
 RUN apt install -y ros-humble-navigation2 
 RUN apt install -y ros-humble-nav2-bringup 
