--- a/robot_localization/docker/Dockerfile
+++ b/robot_localization/docker/Dockerfile
@@ -1,7 +1,8 @@
 FROM ros:humble
 RUN apt update
+RUN apt update
 RUN apt-get install -y libjpeg-dev libjpeg8-dev libfreetype6-dev vim
 RUN apt-get install -y ros-humble-diagnostic-updater 
 RUN apt-get install  -y ros-humble-tf-transformations 
-RUN apt install ros-humble-robot-localization
+RUN apt install -y ros-humble-robot-localization
 
