--- a/nav2/params/nav2_params.yaml
+++ b/nav2/params/nav2_params.yaml
@@ -28,12 +28,12 @@ amcl:
     odom_frame_id: "odom"
     pf_err: 0.05
     pf_z: 0.99
-    recovery_alpha_fast: 0.1 
-    recovery_alpha_slow: 0.001 
+    recovery_alpha_fast: 0.0 #0.1 
+    recovery_alpha_slow: 0.0 #0.001 
     resample_interval: 1
     robot_model_type: "nav2_amcl::DifferentialMotionModel"
     save_pose_rate: 0.5
-    sigma_hit: 0.2
+    sigma_hit: 1.2 #0.2 #1.2 #0.9 # 1.2 #0.2
     tf_broadcast: true
     transform_tolerance: 0.1
     update_min_a: 0.01
@@ -43,6 +43,7 @@ amcl:
     z_rand: 0.5
     z_short: 0.05
     scan_topic: scan
+    #always_reset_initial_pose: true
 
 bt_navigator:
   ros__parameters:
